--- a/app/bugiwear/src/main/res/values/strings.xml
+++ b/app/bugiwear/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     -->
     <string name="hello_world">Hello Square World!</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_setting">SettingActivity</string>
 </resources>
